--- a/Web.config
+++ b/Web.config
@@ -4,4 +4,7 @@
   <system.web>
     <compilation debug="false" targetFramework="4.0" />
   </system.web>
+  <system.webServer>
+      <modules runAllManagedModulesForAllRequests="true"/>
+  </system.webServer>
 </configuration>
