--- a/Web.config
+++ b/Web.config
@@ -2,9 +2,6 @@
 
 <configuration>
   <system.web>
-    <compilation debug="false" targetFramework="4.0" />
-  </system.web>
-  <system.webServer>
-      <modules runAllManagedModulesForAllRequests="true"/>
-  </system.webServer>
+    <compilation debug="true" targetFramework="4.0" />
+  </system.web>  
 </configuration>
