--- a/Web.config
+++ b/Web.config
@@ -1,10 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
   <system.web>
     <compilation debug="false" targetFramework="4.0" />
   </system.web>
   <system.webServer>
-      <modules runAllManagedModulesForAllRequests="true"/>
+      <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
+    <system.data>
+        <DbProviderFactories>
+            <remove invariant="System.Data.SqlServerCe.4.0" />
+            <add invariant="System.Data.SqlServerCe.4.0" name="Microsoft® SQL Server® Compact 4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+        </DbProviderFactories>
+    </system.data>
 </configuration>
